--- a/CIE3.html
+++ b/CIE3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The daily Chronicle</title>
+  <title>SMVITM</title>
  <style>
  body{
 font-family:'Georgia',serif;
@@ -105,6 +105,7 @@ margin-top:20px;
 <body>
 <header>
 <h1>SMVITM</h1>
+<h4>Advaith Acharya - 4MW23CS005</h4>
 </header>
 <nav>
 
