--- a/P3.html
+++ b/P3.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Styled Page Example</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="P3.css">
 </head>
 <body>
 <div id="container">
@@ -22,3 +22,4 @@
 </div>
 </body>
 </html>
+
